--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,3 @@
 PORT = 4000
 
-DB_URI = "mongodb://localhost:27017/Ecommerce"
+DB_URI = "mongodb+srv://deljeet:Spell1144@cluster0.7yuhsxn.mongodb.net/?retryWrites=true&w=majority"
